--- a/package.json
+++ b/package.json
@@ -1,19 +1,44 @@
 {
-  "name": "@mfe-deep/auth-lib",
+  "name": "@Cleyton-S-Santos/auth-lib",
   "version": "0.1.0",
   "private": false,
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "exports": {
+    ".": {
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
+    }
+  },
+  "files": [
+    "dist"
+  ],
+  "sideEffects": false,
+  "engines": {
+    "node": ">=18"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/mfe-deep/auth-lib.git"
+  },
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "typecheck": "tsc --noEmit",
-    "test": "vitest run"
+    "test": "vitest run",
+    "lint": "eslint . --ext .ts",
+    "prepublishOnly": "npm run build && npm run typecheck && npm run lint"
   },
   "devDependencies": {
     "typescript": "^5.6.3",
     "vitest": "^2.1.3",
-    "@types/node": "^22.7.5"
+    "@types/node": "^22.7.5",
+    "@eslint/js": "^9.13.0",
+    "eslint": "^9.13.0",
+    "@typescript-eslint/parser": "^8.12.2",
+    "@typescript-eslint/eslint-plugin": "^8.12.2"
   }
 }
