--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cleyton-s-santos/auth-lib",
+  "name": "@cleytonsousa/auth-lib",
   "version": "0.1.2",
   "private": false,
   "type": "module",
